--- a/lib/streamaze_web/templates/user_reset_password/new.html.heex
+++ b/lib/streamaze_web/templates/user_reset_password/new.html.heex
@@ -1,4 +1,4 @@
-<div class="flex flex-col gap-4">
+<%!-- <div class="flex flex-col gap-4">
   <h1>Forgot your password?</h1>
 
   <.form let={f} for={:user} action={Routes.user_reset_password_path(@conn, :create)}>
@@ -16,4 +16,21 @@
     <%= link "Register", to: Routes.user_registration_path(@conn, :new) %> |
     <%= link "Log in", to: Routes.user_session_path(@conn, :new) %>
   </p>
+</div> --%>
+
+<div class="mr-auto ml-auto w-full max-w-md p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-6 md:p-8 dark:bg-gray-800 dark:border-gray-700">
+  <.form let={f} for={:user} action={Routes.user_reset_password_path(@conn, :create)} class="space-y-6">
+    <h5 class="text-xl font-medium text-gray-900 dark:text-white">Forgot your password?</h5>
+        <div>
+            <%= label f, :email, class: "block mb-2 text-sm font-medium text-gray-900 dark:text-white" do %>Your email<% end %>
+            <%= email_input f, :email, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white", placeholder: "me@example.com", required: true %>
+        </div>
+        <%= submit "Send instructions to reset password", class: "w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" %>
+        <div class="text-sm font-medium text-gray-500 dark:text-gray-300">
+            Already registered? <%= link to: Routes.user_session_path(@conn, :new), class: "text-blue-700 hover:underline dark:text-blue-500" do %>Sign in<% end %>
+            <div class="mt-2">
+              Not registered? <%= link to: Routes.user_registration_path(@conn, :create), class: "text-blue-700 hover:underline dark:text-blue-500" do %>Create account<% end %>
+            </div>
+        </div>
+    </.form>
 </div>
