--- a/lib/streamaze_web/templates/user_session/new.html.heex
+++ b/lib/streamaze_web/templates/user_session/new.html.heex
@@ -16,11 +16,13 @@
                 </div>
                 <%= label f, :remember_me, class: "ml-2 text-sm font-medium text-gray-900 dark:text-gray-300" do %>Remember me for 60 days<% end %>
             </div>
-            <%= link to: Routes.user_reset_password_path(@conn, :new), class: "ml-auto text-sm text-blue-700 hover:underline dark:text-blue-500" do %>Lost Password?<% end %>
         </div>
         <button type="submit" class="w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Login to your account</button>
         <div class="text-sm font-medium text-gray-500 dark:text-gray-300">
             Not registered? <%= link to: Routes.user_registration_path(@conn, :new), class: "text-blue-700 hover:underline dark:text-blue-500" do %>Create account<% end %>
+            <div class="mt-2">
+              Forgot your password? <%= link to: Routes.user_reset_password_path(@conn, :new), class: "ml-auto text-sm text-blue-700 hover:underline dark:text-blue-500" do %>Reset password<% end %>
+            </div>
         </div>
     </.form>
 </div>
