Make sensable updates to payment logic

--- a/lib/streamaze_web/live/profile_live/index.html.heex
+++ b/lib/streamaze_web/live/profile_live/index.html.heex
@@ -59,6 +59,9 @@
                                 <p class="text-sm text-gray-500 truncate dark:text-gray-400">
                                     Kick Username: <%= @dashboard_config.chat_config["kick_channel_name"] || "Not set" %>
                                 </p>
+                                <p class="text-sm text-gray-500 truncate dark:text-gray-400">
+                                    Kick Username: <%= @dashboard_config.chat_config["twitch_channel_name"] || "Not set" %>
+                                </p>
                             </div>
                         </div>
                     </li>
