Add pagination for donations page

--- a/lib/streamaze_web/live/dashboard_live/index.html.heex
+++ b/lib/streamaze_web/live/dashboard_live/index.html.heex
@@ -17,7 +17,7 @@
             <div class="w-full p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
                 <div class="flex items-center justify-between mb-4">
                     <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Latest Donations</h5>
-                    <%= link to: Routes.donation_index_path(@socket, :index), class: "text-sm font-medium text-blue-600 hover:underline dark:text-blue-500" do %>
+                    <%= link to: Routes.donation_index_path(@socket, :index, streamer_id: @selected_streamer_id), class: "text-sm font-medium text-blue-600 hover:underline dark:text-blue-500" do %>
                         View all
                     <% end %>
                 </div>
@@ -48,7 +48,7 @@
                                     <% end %>
                                 </div>
                                 <%= if donation.message do %>
-                                    <div class="mt-3 text-gray-700 dark:text-gray-200"><%= donation.message %></div>
+                                    <div class="mt-3 text-gray-700 dark:text-gray-200 break-all"><%= donation.message %></div>
                                 <% end %>
                                 <p class="mt-2 text-sm text-gray-500 dark:text-gray-400">
                                     <time phx-hook="LocalTime" id="my-local-time"><%= donation.inserted_at %></time>
