--- a/lib/streamaze_web/live/donation_live/index.html.heex
+++ b/lib/streamaze_web/live/donation_live/index.html.heex
@@ -1,12 +1,12 @@
 <div class="flex flex-col gap-6">
-  <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-      <div class="w-full p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
-          <div class="flex items-center justify-between mb-4">
-              <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Donations</h5>
-          </div>
-          <div class="flow-root">
-              <ul role="list" class="divide-y divide-gray-200 dark:divide-gray-700">
-                  <%= for donation <- @donations do %>
+    <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+        <div class="w-full p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
+            <div class="flex items-center justify-between mb-4">
+                <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Donations</h5>
+            </div>
+            <div class="flow-root">
+                <ul role="list" class="divide-y divide-gray-200 dark:divide-gray-700">
+                    <%= for donation <- @donations do %>
                     <li class="py-3 sm:py-4">
                         <div class="flex items-center space-x-4">
                             <div class="flex-shrink-0 relative inline-flex items-center justify-center w-8 h-8 overflow-hidden bg-gray-100 rounded-full dark:bg-gray-600">
@@ -31,15 +31,40 @@
                             <% end %>
                         </div>
                         <%= if donation.message do %>
-                            <div class="mt-3 text-gray-700 dark:text-gray-200"><%= donation.message %></div>
+                            <div class="mt-3 text-gray-700 dark:text-gray-200 break-all"><%= donation.message %></div>
                         <% end %>
                         <p class="mt-2 text-sm text-gray-500 dark:text-gray-400">
                             <time phx-hook="LocalTime" id="my-local-time"><%= donation.inserted_at %></time>
                         </p>
                     </li>
-                  <% end %>
-              </ul>
-          </div>
-      </div>
-  </div>
+                    <% end %>
+                </ul>
+            </div>
+
+            <%!-- Pagination --%>
+            <div class="flex flex-col items-center mt-2">
+                <span class="text-sm text-gray-700 dark:text-gray-400">
+                    Showing <span class="font-semibold text-gray-900 dark:text-white"><%= length(@donations) %></span> of <span class="font-semibold text-gray-900 dark:text-white"><%= @total_count %></span> Entries
+                </span>
+                <div class="inline-flex mt-2 xs:mt-0">
+                    <%= link to: "/donations?before=#{@prev}" do %>
+                        <button disabled={is_nil(@prev)} class="flex items-center justify-center px-4 h-10 text-base font-medium text-white bg-gray-800 rounded-l hover:bg-gray-900 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+                            <svg class="w-3.5 h-3.5 mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 5H1m0 0 4 4M1 5l4-4"/>
+                            </svg>
+                            Prev
+                        </button>
+                    <% end %>
+                    <%= link to: "/donations?after=#{@next}" do %>
+                        <button disabled={is_nil(@next)} class="flex items-center justify-center px-4 h-10 text-base font-medium text-white bg-gray-800 border-0 border-l border-gray-700 rounded-r hover:bg-gray-900 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+                            Next
+                            <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                            </svg>
+                        </button>
+                    <% end %>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
