--- a/lib/streamaze_web/live/expense_live/index.html.heex
+++ b/lib/streamaze_web/live/expense_live/index.html.heex
@@ -1,41 +1,41 @@
-<h1>Listing Expenses</h1>
+<div class="flex flex-col gap-6">
+    <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+        <div class="w-full p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
+            <div class="flex items-center justify-between mb-4">
+                <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Expenses</h5>
+            </div>
+            <div class="flow-root">
+                <ul role="list" class="divide-y divide-gray-200 dark:divide-gray-700">
+                    <%= for expense <- @expenses do %>
+                        <.live_component module={ExpenseCard} expense={expense} id={expense.id} />
+                    <% end %>
+                </ul>
+            </div>
 
-<%= if @live_action in [:new, :edit] do %>
-  <.modal return_to={Routes.expense_index_path(@socket, :index)}>
-    <.live_component
-      module={StreamazeWeb.ExpenseLive.FormComponent}
-      id={@expense.id || :new}
-      title={@page_title}
-      action={@live_action}
-      expense={@expense}
-      return_to={Routes.expense_index_path(@socket, :index)}
-    />
-  </.modal>
-<% end %>
-
-<table>
-  <thead>
-    <tr>
-      <th>Amount</th>
-      <th>Currency</th>
-
-      <th></th>
-    </tr>
-  </thead>
-  <tbody id="expenses">
-    <%= for expense <- @expenses do %>
-      <tr id={"expense-#{expense.id}"}>
-        <td><%= expense.amount %></td>
-        <td><%= expense.currency %></td>
-
-        <td>
-          <span><%= live_redirect "Show", to: Routes.expense_show_path(@socket, :show, expense) %></span>
-          <span><%= live_patch "Edit", to: Routes.expense_index_path(@socket, :edit, expense) %></span>
-          <span><%= link "Delete", to: "#", phx_click: "delete", phx_value_id: expense.id, data: [confirm: "Are you sure?"] %></span>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<span><%= live_patch "New Expense", to: Routes.expense_index_path(@socket, :new) %></span>
+            <%!-- Pagination --%>
+            <div class="flex flex-col items-center mt-2">
+                <span class="text-sm text-gray-700 dark:text-gray-400">
+                    Showing <span class="font-semibold text-gray-900 dark:text-white"><%= length(@expenses) %></span> of <span class="font-semibold text-gray-900 dark:text-white"><%= @total_count %></span> Entries
+                </span>
+                <div class="inline-flex mt-2 xs:mt-0">
+                    <%= link to: "/expenses?before=#{@prev}" do %>
+                        <button disabled={is_nil(@prev)} class="flex items-center justify-center px-4 h-10 text-base font-medium text-white bg-gray-800 rounded-l hover:bg-gray-900 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+                            <svg class="w-3.5 h-3.5 mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 5H1m0 0 4 4M1 5l4-4"/>
+                            </svg>
+                            Prev
+                        </button>
+                    <% end %>
+                    <%= link to: "/expenses?after=#{@next}" do %>
+                        <button disabled={is_nil(@next)} class="flex items-center justify-center px-4 h-10 text-base font-medium text-white bg-gray-800 border-0 border-l border-gray-700 rounded-r hover:bg-gray-900 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
+                            Next
+                            <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                            </svg>
+                        </button>
+                    <% end %>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
