--- a/lib/streamaze_web/live/managers_live/index.html.heex
+++ b/lib/streamaze_web/live/managers_live/index.html.heex
@@ -1,7 +1,9 @@
 <div class="flex flex-col gap-4">
     <h1 class="text-4xl font-bold">Invite Managers</h1>
 
-    <p class="mb-6 font-medium text-gray-400">Invite managers to help you out.</p>
+    <p class="mb-6 font-medium text-gray-400">
+        Invite managers to view your stream info. API keys and other sensitive information is not be visible to managers.
+    </p>
 
     <.form let={f} for={@form} phx-submit="save">
         <div class="mb-6">
