Switch to sandbox URL

--- a/lib/streamaze_web/templates/payment/index.html.heex
+++ b/lib/streamaze_web/templates/payment/index.html.heex
@@ -7,7 +7,7 @@
 
     <div class="max-w-sm">
         <div id="paypal-button-container-P-56P275508W927784JMVKOI6A"></div>
-        <script src="https://www.paypal.com/sdk/js?client-id=AScPfcfQQ9LR5QQ9P36mrxgOgngfC1kcvuJQvvohu8w9uuB_vdFavTplkbU9KXGiD9q1oHmj9ye3eziI&vault=true&intent=subscription" data-sdk-integration-source="button-factory"></script>
+        <script src="https://www.sandbox.paypal.com/sdk/js?client-id=AScPfcfQQ9LR5QQ9P36mrxgOgngfC1kcvuJQvvohu8w9uuB_vdFavTplkbU9KXGiD9q1oHmj9ye3eziI&vault=true&intent=subscription" data-sdk-integration-source="button-factory"></script>
         <script>
         function savePendingSubscription(method, url, body, callback) {
             const xhr = new XMLHttpRequest();
