--- a/lib/streamaze_web/templates/payment/index.html.heex
+++ b/lib/streamaze_web/templates/payment/index.html.heex
@@ -1,13 +1,20 @@
 <div class="flex flex-col gap-4">
-    <h1 class="text-4xl font-bold">Subscribe</h1>
+    <h1 class="text-4xl font-bold">Upgrade</h1>
 
     <p class="mb-6 font-medium text-gray-400">
         To access all features, you need to subscribe. You can cancel your subscription at any time.
     </p>
 
+    <%= if @is_subscribed do %>
+    <div class="block p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
+        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">You are subscribed! 🎉</h5>
+        <p class="font-normal text-gray-700 dark:text-gray-400">You can manage your subscription through your PayPal dashboard.</p>
+    </div>
+    <% else %>
     <div class="max-w-sm">
-        <div id="paypal-button-container-P-56P275508W927784JMVKOI6A"></div>
-        <script src="https://www.sandbox.paypal.com/sdk/js?client-id=AScPfcfQQ9LR5QQ9P36mrxgOgngfC1kcvuJQvvohu8w9uuB_vdFavTplkbU9KXGiD9q1oHmj9ye3eziI&vault=true&intent=subscription" data-sdk-integration-source="button-factory"></script>
+        <div id="paypal-button-container-P-8046699486893250KMVMROZY"></div>
+        <script src="https://www.paypal.com/sdk/js?client-id=AURgfLiZNamuVaOvcrQEkf6pknxEHHXDShuHlZaIyHgQpSkWa0w1pqM7-LXyt1g14cKQDoVqqF-auqaW&vault=true&intent=subscription" data-sdk-integration-source="button-factory"></script>
+
         <script>
         function savePendingSubscription(method, url, body, callback) {
             const xhr = new XMLHttpRequest();
@@ -34,7 +41,7 @@
             },
             createSubscription: function(data, actions) {
                 return actions.subscription.create({
-                    plan_id: 'P-56P275508W927784JMVKOI6A'
+                    plan_id: 'P-8046699486893250KMVMROZY'
                 }).then(function(subscriptionId) {
                     const userId = <%= @user_id %>;
                     return new Promise(function(res, rej) {
@@ -47,7 +54,8 @@
                 });
             },
             onApprove: function(_data, _actions) {}
-        }).render('#paypal-button-container-P-56P275508W927784JMVKOI6A'); // Renders the PayPal button
+        }).render('#paypal-button-container-P-8046699486893250KMVMROZY'); // Renders the PayPal button
         </script>
     </div>
+    <% end %>
 </div>
